**提高纹理计算速度**
1. 将所有纹理预先读取放在一个纹理图像池内，加快纹理计算速度；
2. 将程序中所有原始指针改为shared_ptr。

--- a/RayTracer/RayTracer.vcxproj
+++ b/RayTracer/RayTracer.vcxproj
@@ -89,6 +89,7 @@
     <ClCompile Include="RayTracer.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Sphere.cpp" />
+    <ClCompile Include="TexturePool.cpp" />
     <ClCompile Include="Triangle.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -102,7 +103,9 @@
     <ClInclude Include="Polygon.h" />
     <ClInclude Include="Ray.h" />
     <ClInclude Include="Scene.h" />
+    <ClInclude Include="shared_ptr.h" />
     <ClInclude Include="Sphere.h" />
+    <ClInclude Include="TexturePool.h" />
     <ClInclude Include="Triangle.h" />
     <ClInclude Include="Vector.h" />
   </ItemGroup>
