--- a/RayTracer/RayTracer.vcxproj.filters
+++ b/RayTracer/RayTracer.vcxproj.filters
@@ -54,12 +54,12 @@
     <ClCompile Include="TexturePool.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Matrix.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ray.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="Vector.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Plane.h">
@@ -99,6 +99,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="TexturePool.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Matrix.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
